# quickjs-c-bridge

./: README.md  build-ohos.sh
cxx/: quickjs-ohos.cmake
ohos/: CMakeLists.txt
